# portable-paint

./: CMakeLists.txt  LICENSE.md  generate_resources.py  resources.qrc
src/: main.cpp
src/actions/: Actions.hpp  FileMenuActions.hpp
src/actions/edit_menu/: EditMenuActions.cpp  EditMenuActions.hpp
src/actions/file_menu/: FileMenuActions.cpp  FileMenuActions.hpp
src/actions/help_menu/: HelpMenuActions.cpp  HelpMenuActions.hpp
src/actions/image_menu/: ImageMenuActions.cpp  ImageMenuActions.hpp
src/actions/tools_menu/: ToolsMenuActions.cpp  ToolsMenuActions.hpp
src/actions/view_menu/: ViewMenuActions.cpp  ViewMenuActions.hpp
src/tools/: Tools.hpp
src/ui/canvas/: Canvas.cpp  Canvas.hpp  EraserShape.hpp  Tool.hpp
src/ui/icon_provider/: IconProvider.cpp  IconProvider.hpp
src/ui/menu_bar/: MenuBar.cpp  MenuBar.hpp
src/ui/tool_bar/: ToolBar.cpp  ToolBar.hpp
src/ui/widgets/color_picker/: ColorPickerActionWidget.cpp  ColorPickerActionWidget.hpp  ColorPickerToolButton.cpp  ColorPickerToolButton.hpp
src/ui/widgets/eraser_toolbox/: EraserToolbox.cpp  EraserToolbox.hpp
src/windows/about/: AboutDialog.cpp  AboutDialog.hpp
src/windows/main_window/: MainWindow.cpp  MainWindow.hpp
translations/: portable_paint_en.ts  portable_paint_pl.ts
